--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
-    "express": "^4.18.2",
     "polka": "next",
     "sirv": "^1.0.0"
   },
   "devDependencies": {
+    "sapper": "^0.28.0",
+    "svelte": "^3.17.3",
     "@babel/core": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
@@ -27,8 +28,6 @@
     "@rollup/plugin-url": "^5.0.0",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "sapper": "^0.28.0",
-    "svelte": "^3.17.3"
+    "rollup-plugin-terser": "^7.0.0"
   }
 }
