--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "dropzone": "^6.0.0-beta.2",
     "polka": "next",
-    "sirv": "^1.0.0"
+    "sirv": "^1.0.0",
+    "svelte-dropzone": "^1.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
